examples/bad/13-08-case-mismatch-error.gg
case 0 of {
    True ~> True;
    False ~> False;
}